--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vigil - Application Uptime Monitor</title>
-    <meta name="description" content="Monitor your web applications and websites with real-time uptime tracking, alerts, and detailed analytics. Professional browser-based monitoring solution." />
+    <title>Vigil</title>
+    <meta
+      name="description"
+      content="Monitor your web applications and websites with real-time uptime tracking, alerts, and detailed analytics. Professional browser-based monitoring solution."
+    />
     <meta name="author" content="Vigil Monitoring" />
-    <meta name="keywords" content="uptime monitoring, website monitoring, application monitoring, status checks, performance tracking" />
+    <meta
+      name="keywords"
+      content="uptime monitoring, website monitoring, application monitoring, status checks, performance tracking"
+    />
 
-    <meta property="og:title" content="Vigil - Professional Application Uptime Monitor" />
-    <meta property="og:description" content="Real-time uptime monitoring for your web applications with alerts and detailed analytics" />
+    <meta
+      property="og:title"
+      content="Vigil - Professional Application Uptime Monitor"
+    />
+    <meta
+      property="og:description"
+      content="Real-time uptime monitoring for your web applications with alerts and detailed analytics"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
